resources/assets/styles/mobile.less
.small-logo {
  display: none;
}

@media only screen and (max-width: 768px) {
  html, body {
    overflow: hidden !important;
  }

  body > header {
    margin-top: 64px;
  }

  .site-content {
    margin-left: 0px;
    overflow: scroll;
    padding: 5px;
  }

  .site-body {
    overflow-x: hidden;
  }

  .now-playing {
    margin-left: 0px;
    position: fixed;
    width: 100%;
    bottom: 0;
    z-index: 1010;
    box-shadow: 0 0 8px rgba(0,0,0,0.5);
  }

  .user-details {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 1002;
    margin-right: 10px;
    margin-top: 10px;
  }

  .mobile-header {
    display: block !important;
    position: absolute;
    z-index: 1001;
    background: #84528A;
    height: 64px;
    width: 100%;
    top: 0;

    .logo {
      text-align: center;
      vertical-align: middle;
      display: block;
      margin-left: auto;
      margin-right: auto;
      height: 50px;
      width: 160px;
      padding-top: 16px;

      > img {
        max-height: 90%;
      }
    }
  }

  .sidebar {
    left: -170px;
    transform: translateX(0px) translateZ(0);
    perspective: 1000;
    backface-visibility: hidden;
    will-change: transform;
    z-index: 1011;
    height: ~"calc(100% - 64px)";
    box-shadow: 0 8px 8px rgba(0,0,0,0.5);

    > a {
      display: none;
    }

    li {
      font-size: 12pt;
      a {
        padding: 13px 25px;
      }
    }

    &.animated {
      transition: transform 0.3s ease;
    }

    &.active {
      transform: translateX(170px) translateZ(0);
    }
  }

  .user-details > .avatar {
    border: 0 !important;
    box-shadow: initial !important;
    background: transparent !important;

    > img {
      border-radius: 20px;
    }

    > span {
      display: none !important;
    }
  }

  .track-player {
    margin-right: 0px !important;
    padding: 5px 10px;

    .inner {
      margin-left: 0px !important;
    }

    .image {
      display: none;
    }

    .buttons {
      li.volume, li.status  {
        display: none;
      }
    }

    .song, .artist {
      margin-bottom: 4px;
    }

    .transport {
      border-radius: 0px !important;
      margin-top: 4px;
      height: 10px;

      .bar, .loader-bar {
        border-radius: 0px;
      }
    }
  }

  input.search-input {
    border: 0;
  }

  .dropdowns {
    margin-bottom: 0px;
    > li {
      margin-bottom: 10px;
      > .btn {
        font-size: 10pt;
      }
    }
  }
  .details-columns {
    .cboxElement {
      display: none;
    }
    .right {
      float: none;
      padding: 0px;
      width: auto;
    }
    .left {
      margin-right: 0px;
      margin-left: 0px;
      margin-top: 10px;
    }
  }

  .stretch-to-bottom {
    overflow-y: initial !important;
  }

  .artist-details {
    margin: -5px;
    padding-bottom: 10px;

    > .stretch-to-bottom {
      padding: 0 10px;
      .col-md-6 {
        padding: 0px;
      }
    }

    > header {
      margin-bottom: 0px;

      > img {
        float: none !important;
        display: block;
        width: 50% !important;
        height: 50% !important;
        margin-left: auto;
        margin-right: auto;
      }

      > .artist-right {
        margin-left: 0px !important;
        margin-top: 15px !important;
        text-align: center;

        > h1, .follower-count {
          margin-left: auto;
          margin-right: auto;
        }

        > .btn {
          margin-left: auto;
          margin-right: auto;
        }
      }
    }
  }

  .tabs li a {
    padding: 10px 13px;
  }

  .track-details {
    .single-player {
      &.visible-xs-block {
        float: none;
        width: 80%;
        height: 80%;
        margin-left: auto;
        margin-right: auto;
        margin-top: 10px;
      }

      a {
        font-size: 22pt;
        background: rgba(0, 0, 0, 0.2);
      }
    }

    header {
      margin-bottom: 0px;
      h1 {
        font-size: 16pt;
      }
      h2 {
        font-size: 11pt;
      }
      h1, h2 {
        margin-left: 0px !important;
      }
    }
  }

  .two-pane-view.closed .account-tracks-listing li, .two-pane-view.closed .account-albums-listing li {
    width: 50% !important;
  }

  .site-content > .ui-view.loading {
    margin: 0px -5px;
  }

  .track-editor {
    form {
      padding: 5px;
    }

    .row .form-row {
      width: 97%;
      margin-left: 5px !important;
      margin-right: 5px;
    }
  }

  .license-grid li {
    width: 50%;
    div {
      margin: 0;
    }
  }

  .notification-pullout {
    left: 0;
    width: 100%;
    height: ~"calc(100% - 128px)";
    transform: translateY(-105%) translateZ(0);

    &.active {
      transform: translateY(0) translateZ(0);
    }

    .notif-container {
      padding: 10px;
    }
  }

  .notification-menu {
    position: fixed;
    top: 0;
    right: 54px;
    margin-top: 13px;
    margin-right: 10px;

    a, a:active, a:hover, a:focus {
      color: #fff;
    }

    .counter {
      bottom: 0;
      right: -1px;
    }
  }

  .news {
    display: none;
  }

  .two-pane-view.open {
    .list {
      width: auto;
      float: none;
      margin-bottom: 10px;
    }

    .editor {
      margin-left: 0;
      margin-right: 0;
    }
  }

  .tabs {
    width: 100%;
    overflow-x: scroll;
    display: flex;
    white-space: nowrap;
    border-bottom: 0;
    height: 41px;

    li {
      a {
        border-bottom: 4px solid #ddd;
      }
    }

    &::-webkit-scrollbar {
      display: none;
    }

    &.fixed {
      position: fixed;
      background: #84528a;
      top: 64px;
      left: 0;
      height: 41px;
      width: 100%;
      border-bottom: 0;
      z-index: 100;

      li {
        a {
          background: transparent;
          color: #fff;
          border-bottom: 0;
        }

        &.active a {
          background: transparent;
          color: #fff;
          border-bottom: 4px solid #b885bd;
        }
      }
    }
  }

  .fixed-tabs {
    padding-top: 41px;
  }

  .secondary-content {
    margin-top: 5px;
  }
}

// Super small phones like the iPhone 5
@media only screen and (max-width: 370px) {
  .default-logo {
    display: none;
  }

  .small-logo {
    display: block;
  }

  .burger-wrapper {
    top: 23px;
    left: 15px;
  }

  .notification-menu {
    top: 0;
    right: 54px;
    margin-right: 13px;
    margin-top: 13px;
  }

  .mobile-header .logo {
    margin-left: 55px;
    height: 52px;
    width: 122px;
    padding-top: 18px;
  }
}

